# GestuBot2

./: README.md
ros2_ws/src/gestubot_ros/: CMakeLists.txt  package.xml
ros2_ws/src/gestubot_ros/gestubot_ros/: gesture_bridge.py  gesture_publisher.py
ros2_ws/src/gestubot_ros/launch/: gestubot_gazebo.launch.py
ros2_ws/src/gestubot_ros/msg/: GestureStamped.msg
src/: confidence_filter.py  inference.py
